$Rev$
[2007/10/14]
mHelp.py            Can automatically switch lanauge according the current lanaguage

[2007/10/13]
InputAssistant.py mInputAssistant.py acp
                    Fix 'import as' bug and input assistant bug
                    
[2007/09/26]
TodoWindow.py       Fix date undefined bug

[2007/09/25]
mHelp.py            Improve Help with meide

[2007/09/24]
FindInFiles.py      Improve Enter key process

[2007/09/24]
common.py           Fix get_config_file() bug(return '', should return a default filename
                    if the config.ini is not existed)
DirBrowser.py       Fix add new sub folder has no children flag bug

[2007/09/23]
DirBrowser.py mDirBrowser.py mEditorCtrl.py
                    Made Open Command Here work in Linux
Mixin.py            Disable RELOAD_MIXINS flag, if this is True, when you close 
                    directory browser and reopen it again, some extended menu will
                    not work.
FindReplace.py meide.py
                    When you open Find & Replace panel, and if findtext or replacetext
                    control has focus, you can press ESC to close Find & Replace panel
                    
[2007/09/22]
mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
svn_plugin          Fix directory browser context menu process
FlatButtons.py      Compatible process
SvnSettings.py      Add svn proxy support under linux platform

[2007/09/21]
mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
                    remove finddialog.xrc and finddialog_zh_CN.xrc
import_utils.py     When evalating a word, try to import it first.
SVNSettings.py      Add windows svn proxy setting support

[2007/09/20]
FindReplaceDialog.py Removed replaced with FindReplace.py and refactor find and replace

[2007/09/19]
SvnSupport.py       Fix svn_plugin crash in Linux
common.py           Add get_config_file_obj() function, and change the invoke.
PrefDialog.py dict4ini.py