@@ -12,3 +12,4 @@ yeyesho li <yeyesho AT gmail.com>                  Give advice to NoteBook
 ygao <ygao2004 AT gmail.com>                       Commit many patches
 chaoweilun <chaoweilun@gmail.com>                  Submit Traditional Chinese Translation File
 Tom Eubank <tom@afcon.com>                         Patches and documents
+Tyberius Prime <tyberius_prime@coonabibba.de>      Bug reporter and contribute plugin(dropfile)                             
