@@ -1,0 +1,7 @@
+[info]
+author = Tyberius Prime
+date = 2007-11-08
+version = "1.0"
+description = "Drop File support"
+homepage = 
+
